# ik-anim

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/private/: Game.cpp
src/private/Animation/: Frame.cpp
src/private/Ik/: Segment.cpp
src/public/Animation/: Frame.h
src/public/Ik/: Segment.h
